kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: rabbitmq-admin
  labels:
    app: rabbitmq-admin
