kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: rabbitmq-admin-service
  namespace: rabbitmq-admin
  labels:
    app: rabbitmq-admin
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: 8080
      protocol: TCP
      name: http
  selector:
    app: rabbitmq-admin
